--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
       <div class="image-banner">
           <div class="banner" id="fondo">
               <img [src]="miPortfolio.img" alt="" id="img">
-              <button class="edit-button"><i class="fa-solid fa-pen"></i></button>
+              <button class="edit-button" onclick=""><i class="fa-solid fa-pen"></i></button>
               <div class="container-image">
                   <img [src]="miPortfolio.image" id="image">
               </div>
@@ -31,6 +31,8 @@
               {{miPortfolio.name}}
           </h1>
           <p class="lead" id="work">{{miPortfolio.work}} </p>
+          <div>
+          </div>
           <p class="lead mb-5" id="localization"> {{miPortfolio.localization}} </p>
       </div>
   </section>
